<resources>
    <string name="app_name">Structured Plan</string>
    <string name="signup_username">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_passwordConfirm">Password Confirm</string>
    <string name="signin_Redirect">Already have account? Sign in</string>
    <string name="signup_btnText">Sign up</string>
    <string name="signup_lable">SIGN UP</string>
    <string name="signin_lable">SIGN IN</string>
    <string name="signin_btnText">Sign in</string>
    <string name="signup_Redirect">Don\'t have account? Sign up</string>
</resources>